[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/upgraded/Upgrade System.gd" type="Script" id=1]
[ext_resource path="res://scenes/upgraded/Upgrade Control.gd" type="Script" id=2]
[ext_resource path="res://scenes/upgraded/assets/images/upgrade_scene_background.png" type="Texture" id=3]
[ext_resource path="res://scenes/upgraded/assets/images/upgrade_scene_button_start.png" type="Texture" id=4]
[ext_resource path="res://PixelFJVerdana12pt.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/upgraded/assets/images/upgrade_scene_button_upgrade.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[node name="Upgrade System" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Node2D2" type="Node2D" parent="."]
z_index = 4096
z_as_relative = false
script = ExtResource( 2 )

[node name="UpgradesBackground" type="Sprite" parent="Node2D2"]
position = Vector2( 684, 384 )
z_index = -1
texture = ExtResource( 3 )

[node name="ContinueButton" type="TextureButton" parent="Node2D2"]
margin_left = 1197.13
margin_top = 667.298
margin_right = 1325.13
margin_bottom = 731.298
texture_normal = ExtResource( 4 )

[node name="MaxHPUpgradeCost" type="Label" parent="Node2D2"]
margin_left = 520.373
margin_top = 218.523
margin_right = 733.373
margin_bottom = 300.523
custom_fonts/font = SubResource( 1 )
text = "HP Cost"

[node name="AdditionalTurretCost" type="Label" parent="Node2D2"]
margin_left = 523.237
margin_top = 457.662
margin_right = 736.237
margin_bottom = 539.662
custom_fonts/font = SubResource( 1 )
text = "HP Cost"

[node name="PlayerDamageUpgradeCost" type="Label" parent="Node2D2"]
margin_left = 518.941
margin_top = 277.234
margin_right = 731.941
margin_bottom = 359.234
custom_fonts/font = SubResource( 1 )
text = "DMG Cost"

[node name="TurretDamageCost" type="Label" parent="Node2D2"]
margin_left = 521.805
margin_top = 516.373
margin_right = 734.805
margin_bottom = 598.373
custom_fonts/font = SubResource( 1 )
text = "DMG Cost"

[node name="PlayerExplosionRadiusUpgradeCost" type="Label" parent="Node2D2"]
margin_left = 516.077
margin_top = 334.513
margin_right = 729.077
margin_bottom = 416.513
custom_fonts/font = SubResource( 1 )
text = "HP Cost"

[node name="TurretBulletSpeedCost" type="Label" parent="Node2D2"]
margin_left = 518.941
margin_top = 573.652
margin_right = 731.941
margin_bottom = 655.652
custom_fonts/font = SubResource( 1 )
text = "HP Cost"

[node name="TurretFiringRateCost" type="Label" parent="Node2D2"]
margin_left = 517.509
margin_top = 632.363
margin_right = 730.509
margin_bottom = 714.363
custom_fonts/font = SubResource( 1 )
text = "HP Cost"

[node name="PlayerExplosionRadius" type="Label" parent="Node2D2"]
margin_left = 398.655
margin_top = 333.081
margin_right = 611.655
margin_bottom = 415.081
custom_fonts/font = SubResource( 1 )
text = "ER"

[node name="CurrentMaxHP" type="Label" parent="Node2D2"]
margin_left = 402.0
margin_top = 219.0
margin_right = 449.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 1 )
text = "HP"

[node name="CurrentPlayerDamage" type="Label" parent="Node2D2"]
margin_left = 397.704
margin_top = 274.847
margin_right = 465.704
margin_bottom = 313.847
custom_fonts/font = SubResource( 1 )
text = "DMG"

[node name="CurrentTurretCount" type="Label" parent="Node2D2"]
margin_left = 400.952
margin_top = 453.934
margin_right = 613.952
margin_bottom = 535.934
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="CurrentTurretDamage" type="Label" parent="Node2D2"]
margin_left = 399.52
margin_top = 509.781
margin_right = 612.52
margin_bottom = 591.781
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="CurrentTurretBulletSpeed" type="Label" parent="Node2D2"]
margin_left = 400.952
margin_top = 571.356
margin_right = 613.952
margin_bottom = 653.356
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="CurrentTurretFiringRate" type="Label" parent="Node2D2"]
margin_left = 400.952
margin_top = 632.931
margin_right = 613.952
margin_bottom = 714.931
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="Money" type="Label" parent="Node2D2"]
margin_left = 561.332
margin_top = 42.9591
margin_right = 749.332
margin_bottom = 114.959
custom_fonts/font = SubResource( 2 )
text = "Money"

[node name="Level" type="Label" parent="Node2D2"]
margin_left = 1211.17
margin_top = 50.1189
margin_right = 1399.17
margin_bottom = 122.119
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="UpgradeMaxHP" type="TextureButton" parent="Node2D2"]
margin_left = 720.089
margin_top = 202.568
margin_right = 848.089
margin_bottom = 266.568
texture_normal = ExtResource( 6 )

[node name="UpgradePlayerDamage" type="TextureButton" parent="Node2D2"]
margin_left = 719.657
margin_top = 266.007
margin_right = 847.657
margin_bottom = 330.007
texture_normal = ExtResource( 6 )

[node name="UpgradePlayerExplosionRadius" type="TextureButton" parent="Node2D2"]
margin_left = 719.657
margin_top = 330.007
margin_right = 847.657
margin_bottom = 394.007
texture_normal = ExtResource( 6 )

[node name="UpgradeTurretCount" type="TextureButton" parent="Node2D2"]
margin_left = 725.816
margin_top = 441.707
margin_right = 853.816
margin_bottom = 505.707
texture_normal = ExtResource( 6 )

[node name="UpgradeTurretDamage" type="TextureButton" parent="Node2D2"]
margin_left = 725.384
margin_top = 505.146
margin_right = 853.384
margin_bottom = 569.146
texture_normal = ExtResource( 6 )

[node name="UpgradeTurretBulletSpeed" type="TextureButton" parent="Node2D2"]
margin_left = 725.384
margin_top = 569.146
margin_right = 853.384
margin_bottom = 633.146
texture_normal = ExtResource( 6 )

[node name="UpgradeTurretFiringRate" type="TextureButton" parent="Node2D2"]
margin_left = 725.384
margin_top = 633.146
margin_right = 853.384
margin_bottom = 697.146
texture_normal = ExtResource( 6 )

[connection signal="pressed" from="Node2D2/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Node2D2/UpgradeMaxHP" to="." method="_on_UpgradeMaxHP_pressed"]
[connection signal="pressed" from="Node2D2/UpgradePlayerDamage" to="." method="_on_UpgradePlayerDamage_pressed"]
[connection signal="pressed" from="Node2D2/UpgradePlayerExplosionRadius" to="." method="_on_UpgradePlayerExplosionRadius_pressed"]
[connection signal="pressed" from="Node2D2/UpgradeTurretCount" to="." method="_on_UpgradeTurretCount_pressed"]
[connection signal="pressed" from="Node2D2/UpgradeTurretDamage" to="." method="_on_UpgradeTurretDamage_pressed"]
[connection signal="pressed" from="Node2D2/UpgradeTurretBulletSpeed" to="." method="_on_UpgradeTurretBulletSpeed_pressed"]
[connection signal="pressed" from="Node2D2/UpgradeTurretFiringRate" to="." method="_on_UpgradeTurretFiringRate_pressed"]
